app-service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: our-service
  name: our-service
spec:
  selector: 
    app: ourapp
  ports:
    - port: 80
      targetPort: 8080
      name: http
