app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: our-ingress
spec:
  rules:
  - host: ourhost.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: our-service
            port:
              name:  http
